// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerdictList > should highlight selected verdicts 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-verdict-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary"
      data-testid="tw-badge"
    >
      PASSED
    </div>
    <div
      class="flex flex-col flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors overflow-wrap-anywhere text-start bg-primary-wash border-primary"
        data-testid="tw-badge"
      >
        verdict-1
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-2
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerdictList > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-verdict-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors text-text-expected bg-badge-3"
      data-testid="tw-badge"
    >
      PASSED
    </div>
    <div
      class="flex flex-col flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-1
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-2
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerdictList > should render expected result (TRANSPARENT) 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-verdict-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary"
      data-testid="tw-badge"
    >
      PASSED
    </div>
    <div
      class="flex flex-col flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-1
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-2
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerdictList > should render not expected result (GREEN) 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-verdict-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors text-text-expected bg-badge-3"
      data-testid="tw-badge"
    >
      PASSED
    </div>
    <div
      class="flex flex-col flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-1
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-2
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VerdictList > should render not expected result (RED) 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
    data-testid="tw-verdict-list"
  >
    <div
      class="inline-flex items-center w-fit py-0.5 px-2 rounded border border-transparent text-[0.75rem] font-medium transition-colors bg-bg-fillError text-text-unexpected"
      data-testid="tw-badge"
    >
      PASSED
    </div>
    <div
      class="flex flex-col flex-wrap gap-1"
    >
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-1
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-2
      </div>
      <div
        class="inline-flex items-center w-fit py-0.5 px-2 rounded border text-[0.75rem] font-medium transition-colors bg-transparent border-border-primary overflow-wrap-anywhere text-start"
        data-testid="tw-badge"
      >
        verdict-3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
